--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.mika.hhn</groupId>
-    <artifactId>Calculator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Calculator-API</artifactId>
+    <version>1.0.0</version>
+
+    <name>Calculator-API</name>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub mikastudhhn Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/mikastudhhn/Calculator-API</url>
+        </repository>
+    </distributionManagement>
 
 </project>
