--- a/.github/workflows/publish-java-maven.yml
+++ b/.github/workflows/publish-java-maven.yml
@@ -1,9 +1,7 @@
 name: Publish package to GitHub Packages
 on:
-  push:
-    branches:
-      - main
-
+  release:
+    types: [created]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -11,14 +9,11 @@ jobs:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up JDK 23
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: '23'
-          distribution: 'adopt'
-
+          distribution: 'temurin'
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
