--- a/.github/workflows/publish-java-maven.yml
+++ b/.github/workflows/publish-java-maven.yml
@@ -9,12 +9,15 @@ jobs:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK 23
+        uses: actions/setup-java@v3
         with:
           java-version: '23'
-          distribution: 'temurin'
+          distribution: 'adopt'
+
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode deploy -Dgpg.skip=true
         env:
-          GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
