--- a/.github/workflows/publish-java-maven.yml
+++ b/.github/workflows/publish-java-maven.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Publish package
         run: mvn --batch-mode deploy -Dgpg.skip=true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
