--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,25 +8,14 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 23
-      uses: actions/setup-java@v4
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: '23'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }}/.github # location for the settings.xml file
-
+        java-version: 1.8
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/.github/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
+      run: mvn package
